--- a/articles.html
+++ b/articles.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Articles - Your NGO Name</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <style>
+        :root {
+            --primary: #14b8a6;
+            --primary-dark: #0d9488;
+            --accent: #f97316;
+            --light-bg: #f8fafc;
+            --text: #1e293b;
+            --text-light: #64748b;
+            --card-bg: #ffffff;
+            --shadow: 0 4px 20px rgba(0, 0, 0, 0.06);
+            --radius: 16px;
+            --transition: all 0.3s ease;
+        }
+
         * {
             margin: 0;
             padding: 0;
@@ -14,9 +27,9 @@
 
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #ffffff;
-            color: #1a1a1a;
-            line-height: 1.6;
+            background-color: #fff;
+            color: var(--text);
+            line-height: 1.7;
         }
 
         /* Header */
@@ -24,251 +37,274 @@
             position: fixed;
             top: 0;
             width: 100%;
-            background: #ffffff;
+            background: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(10px);
             z-index: 1000;
             padding: 1rem 0;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-            transition: all 0.3s ease;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.03);
         }
 
         nav {
             display: flex;
             justify-content: center;
-            align-items: center;
-            gap: 2.5rem;
+            gap: 2rem;
             max-width: 1200px;
             margin: 0 auto;
-            padding: 0 2rem;
+            padding: 0 1.5rem;
         }
 
         nav a {
-            color: #333;
+            color: var(--text);
             text-decoration: none;
-            font-weight: 500;
-            font-size: 0.95rem;
+            font-weight: 600;
+            font-size: 1rem;
             position: relative;
-            transition: color 0.3s ease;
+            padding: 0.5rem 0;
+            transition: var(--transition);
+        }
+
+        nav a:hover {
+            color: var(--primary);
         }
 
         nav a::after {
             content: '';
             position: absolute;
-            bottom: -5px;
+            bottom: 0;
             left: 0;
             width: 0;
-            height: 2px;
-            background: #2563eb;
-            transition: width 0.3s ease;
-        }
-
-        nav a:hover {
-            color: #2563eb;
+            height: 3px;
+            background: var(--accent);
+            border-radius: 2px;
+            transition: var(--transition);
         }
 
         nav a:hover::after {
             width: 100%;
         }
 
-        /* Section Styling */
+        /* Section */
         .section {
             padding: 5rem 2rem;
             max-width: 1200px;
-            margin: 80px auto 0; /* Add top margin to account for fixed header */
+            margin: 80px auto 0;
         }
 
-        .section h2 {
+        .section-header {
             text-align: center;
             margin-bottom: 3rem;
-            font-size: 2.5rem;
-            font-weight: 700;
-            color: #1a1a1a;
+            max-width: 700px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
-        .section h2::after {
+        .section-header h2 {
+            font-family: 'Playfair Display', serif;
+            font-size: 2.5rem;
+            font-weight: 700;
+            color: var(--text);
+            margin-bottom: 1rem;
+        }
+
+        .section-header::after {
             content: '';
             display: block;
             width: 60px;
             height: 4px;
-            background: #2563eb;
-            margin: 1rem auto 0;
+            background: var(--accent);
+            margin: 1.25rem auto 0;
             border-radius: 2px;
         }
 
         /* Filters */
         .filters {
             text-align: center;
-            margin-bottom: 2rem;
-        }
-        .filters button {
-            margin: 0.25rem 0.5rem;
-            padding: 0.5rem 1rem;
-            background-color: #f3f4f6; /* Light gray */
-            border: 1px solid #d1d5db; /* Gray border */
-            border-radius: 4px;
-            cursor: pointer;
-            color: #374151; /* Gray text */
-            font-family: 'Inter', sans-serif;
-            font-weight: 500;
-            transition: all 0.3s ease;
-        }
-        .filters button.active, .filters button:hover {
-            background-color: #2563eb; /* Blue */
-            color: white;
-            border-color: #2563eb;
+            margin-bottom: 2.5rem;
         }
 
-        /* Articles Grid */
-        .articles-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+        .filters button {
+            margin: 0.25rem 0.5rem;
+            padding: 0.5rem 1.25rem;
+            background-color: #f1f5f9;
+            border: 1px solid #cbd5e1;
+            border-radius: 50px;
+            cursor: pointer;
+            color: var(--text-light);
+            font-family: 'Inter', sans-serif;
+            font-weight: 600;
+            font-size: 0.95rem;
+            transition: var(--transition);
+        }
+
+        .filters button.active,
+        .filters button:hover {
+            background-color: var(--primary);
+            color: white;
+            border-color: var(--primary);
+        }
+
+        /* Articles List - Horizontal Cards */
+        .articles-list {
+            display: flex;
+            flex-direction: column;
             gap: 2rem;
         }
 
-        /* Card Design (same as index.html) */
-        .card {
-            background: white;
-            border-radius: 12px;
+        .article-card {
+            display: flex;
+            background: var(--card-bg);
+            border-radius: var(--radius);
             overflow: hidden;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
-            transition: all 0.3s ease;
-            border: 1px solid #e5e7eb;
+            box-shadow: var(--shadow);
+            transition: var(--transition);
         }
 
-        .card:hover {
-            transform: translateY(-8px);
-            box-shadow: 0 12px 30px rgba(0, 0, 0, 0.12);
+        .article-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
         }
 
-        .card img {
+        .card-image {
+            flex: 0 0 280px;
+            height: 200px;
+            overflow: hidden;
+        }
+
+        .card-image img {
             width: 100%;
-            height: 240px;
+            height: 100%;
             object-fit: cover;
             transition: transform 0.4s ease;
         }
 
-        .card:hover img {
+        .article-card:hover .card-image img {
             transform: scale(1.05);
         }
 
         .card-content {
+            flex: 1;
             padding: 1.75rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
         }
 
         .card-content h3 {
-            font-size: 1.35rem;
+            font-size: 1.4rem;
             margin-bottom: 0.75rem;
-            color: #1a1a1a;
-            font-weight: 600;
-            line-height: 1.4;
+            font-weight: 700;
+            color: var(--text);
+            line-height: 1.3;
         }
 
         .card-content p {
-            color: #6b7280;
-            line-height: 1.7;
+            color: var(--text-light);
             margin-bottom: 1.25rem;
-            font-size: 0.95rem;
+            font-size: 0.98rem;
+            flex-grow: 1;
         }
 
-        .card-content p strong {
-            color: #2563eb;
-            font-weight: 600;
-        }
-
-        .card button {
-            background: #2563eb;
+        .read-more-btn {
+            background: var(--primary);
             color: white;
             border: none;
             padding: 0.75rem 1.5rem;
-            border-radius: 6px;
+            border-radius: 8px;
             font-weight: 600;
+            font-size: 0.95rem;
             cursor: pointer;
-            transition: all 0.3s ease;
-            font-family: 'Inter', sans-serif;
-            font-size: 0.9rem;
-            width: 100%;
+            transition: var(--transition);
+            width: fit-content;
+            align-self: flex-start;
         }
 
-        .card button:hover {
-            background: #1e40af;
-            transform: translateY(-1px);
-            box-shadow: 0 4px 12px rgba(37, 99, 235, 0.3);
+        .read-more-btn:hover {
+            background: var(--primary-dark);
+            transform: translateY(-2px);
         }
 
-        /* Pagination / Load More */
+        /* Pagination */
         .pagination {
             text-align: center;
             margin-top: 3rem;
         }
+
         .pagination button {
-            padding: 0.75rem 1.5rem;
-            background-color: #2563eb;
+            padding: 0.8rem 2rem;
+            background: var(--primary);
             color: white;
             border: none;
-            border-radius: 6px;
-            cursor: pointer;
-            font-family: 'Inter', sans-serif;
+            border-radius: 50px;
             font-weight: 600;
             font-size: 1rem;
-            transition: background-color 0.3s ease;
+            cursor: pointer;
+            transition: var(--transition);
         }
+
         .pagination button:hover {
-            background-color: #1e40af;
+            background: var(--primary-dark);
+            transform: translateY(-2px);
         }
 
         /* Footer */
         footer {
-            background: #1a1a1a;
-            color: #9ca3af;
+            background: var(--text);
+            color: #cbd5e1;
             text-align: center;
             padding: 2.5rem 2rem;
-            margin-top: 4rem; /* Add top margin */
+            margin-top: 4rem;
+            font-size: 0.95rem;
         }
 
-        footer p {
-            font-size: 0.9rem;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            nav {
-                flex-wrap: wrap;
-                gap: 1rem;
-                justify-content: center;
-            }
-
-            .section {
-                padding: 3rem 1.5rem;
-            }
-
-            .section h2 {
-                font-size: 2rem;
-            }
-
-            .articles-grid {
-                grid-template-columns: 1fr;
-            }
-        }
-
-        /* Loading Animation */
+        /* Loading */
         .loading {
             text-align: center;
-            padding: 3rem 2rem;
-            color: #6b7280;
+            padding: 3rem;
+            color: var(--text-light);
         }
 
         .spinner {
-            border: 3px solid #e5e7eb;
-            border-top: 3px solid #2563eb;
-            border-radius: 50%;
             width: 40px;
             height: 40px;
-            animation: spin 0.8s linear infinite;
+            border: 3px solid rgba(20, 184, 166, 0.2);
+            border-top: 3px solid var(--primary);
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
             margin: 0 auto 1rem;
         }
 
         @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
+            to { transform: rotate(360deg); }
+        }
+
+        /* Responsive */
+        @media (max-width: 768px) {
+            .article-card {
+                flex-direction: column;
+            }
+
+            .card-image {
+                flex: none;
+                height: 220px;
+                width: 100%;
+            }
+
+            .card-content {
+                padding: 1.5rem;
+            }
+
+            nav {
+                gap: 1.25rem;
+                flex-wrap: wrap;
+            }
+
+            .section {
+                padding: 3.5rem 1.5rem;
+            }
+
+            .section-header h2 {
+                font-size: 2rem;
+            }
         }
     </style>
 </head>
@@ -284,28 +320,32 @@
     </header>
 
     <div class="section">
-        <h2>All Articles</h2>
+        <div class="section-header">
+            <h2>All Articles</h2>
+        </div>
+
         <div class="filters" id="tags-container">
             <!-- Tags will be loaded here -->
         </div>
-        <div id="articles-container" class="articles-grid">
-            <!-- Articles will be loaded here -->
+
+        <div id="articles-container" class="articles-list">
             <div class="loading">
                 <div class="spinner"></div>
                 <p>Loading articles...</p>
             </div>
         </div>
+
         <div class="pagination" id="pagination-container" style="display:none;">
             <button id="load-more-btn">Load More</button>
         </div>
     </div>
 
     <footer>
-        <p>&copy; 2024 Your NGO Name. All rights reserved.</p>
+        <p>&copy; 2025 Your NGO Name. All rights reserved.</p>
     </footer>
 
     <script>
-        // --- Helper Functions (same as index.html) ---
+        // --- Helper Functions ---
         function parseYAML(yamlStr) {
             const result = {};
             const lines = yamlStr.trim().split('\n');
@@ -379,7 +419,7 @@
                 renderArticles(allArticles);
             } catch (error) {
                 console.error('Error loading articles:', error);
-                document.getElementById('articles-container').innerHTML = '<p>Error loading articles. Please try again later.</p>';
+                document.getElementById('articles-container').innerHTML = '<p style="text-align:center;color:#ef4444;">Error loading articles.</p>';
             }
         }
 
@@ -392,7 +432,6 @@
 
         function filterArticles(tag) {
             currentFilter = tag;
-            // Update active button
             document.querySelectorAll('#tags-container button').forEach(btn => btn.classList.remove('active'));
             event.target.classList.add('active');
 
@@ -411,14 +450,19 @@
             const pageArticles = articles.slice(0, end);
 
             const articleCards = pageArticles.map(article => {
-                const excerpt = article.htmlBody.substring(0, 120) + '...'; // Match index.html excerpt length
+                const excerpt = article.htmlBody.replace(/<[^>]*>/g, '').substring(0, 150) + '...';
+                const imageUrl = article.meta.image || 'https://via.placeholder.com/280x200/e2e8f0/64748b?text=No+Image';
                 return `
-                    <div class="card">
-                        <img src="${article.meta.image}" alt="${article.meta.title}" loading="lazy">
+                    <div class="article-card">
+                        <div class="card-image">
+                            <img src="${imageUrl}" alt="${article.meta.title}" loading="lazy">
+                        </div>
                         <div class="card-content">
-                            <h3>${article.meta.title}</h3>
-                            <p>${excerpt}</p>
-                            <button onclick="openDetail('${article.id}', 'article')">Read More</button>
+                            <div>
+                                <h3>${article.meta.title}</h3>
+                                <p>${excerpt}</p>
+                            </div>
+                            <button class="read-more-btn" onclick="openDetail('${article.id}')">Read More</button>
                         </div>
                     </div>
                 `;
@@ -426,7 +470,6 @@
 
             document.getElementById('articles-container').innerHTML = articleCards;
 
-            // Show/hide pagination
             const paginationContainer = document.getElementById('pagination-container');
             if (articles.length > end) {
                 paginationContainer.style.display = 'block';
