--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home - Your NGO Name</title>
+    <title>BioNova</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet" />
     <style>
         :root {
@@ -577,7 +577,7 @@
     <div class="hero">
         <div class="hero-content">
             <h1>Making a Difference Together</h1>
-            <p>Empowering communities through sustainable development, education, and collaborative action for lasting positive change.</p>
+            <p>Empowering communities through sustainable development</p>
             <button class="cta-button" onclick="window.location.href='contact.html'">Get Involved</button>
         </div>
     </div>
