--- a/team_detail.html
+++ b/team_detail.html
@@ -1,296 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loading...</title> <!-- Will be updated by JS -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #ffffff;
-            color: #1a1a1a;
-            line-height: 1.6;
-        }
-
-        /* Header */
-        header {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            background: #ffffff;
-            z-index: 1000;
-            padding: 1rem 0;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-            transition: all 0.3s ease;
-        }
-
-        nav {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 2.5rem;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 2rem;
-        }
-
-        nav a {
-            color: #333;
-            text-decoration: none;
-            font-weight: 500;
-            font-size: 0.95rem;
-            position: relative;
-            transition: color 0.3s ease;
-        }
-
-        nav a::after {
-            content: '';
-            position: absolute;
-            bottom: -5px;
-            left: 0;
-            width: 0;
-            height: 2px;
-            background: #2563eb;
-            transition: width 0.3s ease;
-        }
-
-        nav a:hover {
-            color: #2563eb;
-        }
-
-        nav a:hover::after {
-            width: 100%;
-        }
-
-        /* Team Detail Section */
-        .team-detail {
-            max-width: 800px;
-            margin: 100px auto 4rem; /* Top margin for fixed header, bottom for footer */
-            padding: 3rem 2rem;
-            background-color: white;
-            border-radius: 12px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
-            border: 1px solid #e5e7eb;
-            text-align: center;
-        }
-
-        .team-detail img {
-            width: 220px; /* Fixed width for circular image */
-            height: 220px; /* Fixed height for circular image */
-            border-radius: 50%; /* Make image circular */
-            object-fit: cover;
-            margin: 0 auto 1.5rem; /* Center image and add margin */
-            display: block; /* Ensure block display for centering */
-            border: 4px solid #e5e7eb; /* Optional border for image */
-        }
-
-        .team-meta h1 {
-            font-size: 2.25rem;
-            margin-bottom: 0.5rem;
-            color: #1a1a1a;
-        }
-        .team-meta p.role {
-            color: #2563eb; /* Blue color for role */
-            font-weight: 600;
-            font-size: 1.2rem;
-            margin-bottom: 1.5rem;
-        }
-
-        .team-bio {
-            line-height: 1.8;
-            color: #374151;
-            text-align: left; /* Align bio text to the left */
-        }
-        .team-bio h1, .team-bio h2, .team-bio h3 {
-            color: #1a1a1a;
-            margin-top: 1.5rem;
-            margin-bottom: 1rem;
-            text-align: left; /* Ensure headings inside bio are left-aligned */
-        }
-        .team-bio h1 {
-            font-size: 2rem;
-            font-weight: 700;
-        }
-        .team-bio h2 {
-            font-size: 1.75rem;
-            font-weight: 600;
-        }
-        .team-bio h3 {
-            font-size: 1.5rem;
-            font-weight: 600;
-        }
-        .team-bio p {
-            margin-bottom: 1.25rem;
-            text-align: left; /* Ensure paragraphs inside bio are left-aligned */
-        }
-        .team-bio a {
-            color: #2563eb;
-            text-decoration: underline;
-        }
-        .team-bio a:hover {
-            color: #1e40af;
-        }
-        .team-bio ul, .team-bio ol {
-            margin-left: 1.5rem;
-            margin-bottom: 1.25rem;
-            text-align: left; /* Ensure lists inside bio are left-aligned */
-        }
-        .team-bio li {
-            margin-bottom: 0.5rem;
-        }
-
-        /* Footer */
-        footer {
-            background: #1a1a1a;
-            color: #9ca3af;
-            text-align: center;
-            padding: 2.5rem 2rem;
-        }
-
-        footer p {
-            font-size: 0.9rem;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            nav {
-                flex-wrap: wrap;
-                gap: 1rem;
-                justify-content: center;
-            }
-
-            .team-detail {
-                margin: 90px 1rem 2rem; /* Adjusted for mobile */
-                padding: 2rem 1.5rem;
-            }
-
-            .team-detail img {
-                width: 180px; /* Smaller image on mobile */
-                height: 180px;
-            }
-
-            .team-meta h1 {
-                font-size: 1.8rem;
-            }
-
-            .team-meta p.role {
-                font-size: 1rem;
-            }
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Loading...</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
-<body>
-    <header id="header">
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="articles.html">Articles</a>
-            <a href="team.html">Team</a>
-            <a href="services.html">Services</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
 
-    <div class="team-detail">
-        <img id="team-image" src="" alt="" loading="lazy">
-        <div class="team-meta">
-            <h1 id="team-name">Loading...</h1>
-            <p class="role" id="team-role"></p>
-        </div>
-        <div id="team-bio" class="team-bio">
-            <!-- Team bio content will be loaded here -->
-        </div>
+<body class="bg-light" style="font-family: 'Inter', sans-serif;">
+  <!-- Header -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
+    <div class="container">
+      <a class="navbar-brand fw-semibold" href="index.html">Your NGO</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="articles.html">Articles</a></li>
+          <li class="nav-item"><a class="nav-link" href="team.html">Team</a></li>
+          <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        </ul>
+      </div>
     </div>
+  </nav>
 
-    <footer>
-        <p>&copy; 2024 Your NGO Name. All rights reserved.</p>
-    </footer>
+  <!-- Main Content -->
+  <main class="container my-5 pt-5">
+    <div class="card border-0 shadow-sm mx-auto" style="max-width: 800px;">
+      <div class="card-body text-center p-4">
+        <img id="team-image" src="" alt="Team Member" class="rounded-circle img-fluid mb-3" style="width: 200px; height: 200px; object-fit: cover;">
+        <h1 id="team-name" class="fw-bold mb-2">Loading...</h1>
+        <p id="team-role" class="text-primary fw-semibold mb-4"></p>
+        <div id="team-bio" class="text-start"></div>
+      </div>
+    </div>
+  </main>
 
-    <script>
-        // --- Helper Functions (same as index.html) ---
-        function parseYAML(yamlStr) {
-            const result = {};
-            const lines = yamlStr.trim().split('\n');
-            for (const line of lines) {
-                const [key, ...valueParts] = line.split(':');
-                const trimmedKey = key.trim();
-                let value = valueParts.join(':').trim();
-                if (value.startsWith('"') && value.endsWith('"')) {
-                    value = value.slice(1, -1);
-                } else if (value.startsWith("'") && value.endsWith("'")) {
-                    value = value.slice(1, -1);
-                } else if (value.startsWith('[') && value.endsWith(']')) {
-                    value = value.slice(1, -1).split(',').map(v => v.trim().replace(/"/g, '').replace(/'/g, ''));
-                }
-                result[trimmedKey] = value;
-            }
-            return result;
+  <!-- Footer -->
+  <footer class="bg-dark text-white-50 text-center py-4 mt-5">
+    <div class="container">
+      <p class="mb-0">&copy; 2024 Your NGO Name. All rights reserved.</p>
+    </div>
+  </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script>
+    // Parse YAML frontmatter
+    function parseYAML(yamlStr) {
+      const result = {};
+      const lines = yamlStr.trim().split('\n');
+      for (const line of lines) {
+        const [key, ...valueParts] = line.split(':');
+        const trimmedKey = key.trim();
+        let value = valueParts.join(':').trim();
+        if (value.startsWith('"') && value.endsWith('"')) {
+          value = value.slice(1, -1);
+        } else if (value.startsWith("'") && value.endsWith("'")) {
+          value = value.slice(1, -1);
+        } else if (value.startsWith('[') && value.endsWith(']')) {
+          value = value.slice(1, -1).split(',').map(v => v.trim().replace(/["']/g, ''));
         }
+        result[trimmedKey] = value;
+      }
+      return result;
+    }
 
-        function simpleMarkdownToHTML(md) {
-            let html = md;
-            html = html.replace(/^(\s*)## (.+)$/gm, '$1<h2>$2</h2>');
-            html = html.replace(/^(\s*)# (.+)$/gm, '$1<h1>$2</h1>');
-            html = html.replace(/^(\s*)### (.+)$/gm, '$1<h3>$2</h3>');
-            html = html.replace(/\*\*(.+?)\*\*/g, '<strong>$1</strong>');
-            html = html.replace(/\*(.+?)\*/g, '<em>$1</em>');
-            html = html.replace(/\[([^\]]+)\]\(([^)]+)\)/g, '<a href="$2" target="_blank">$1</a>');
-            html = html.replace(/^- (.+)$/gm, '<li>$1</li>');
-            html = html.replace(/(<li>.+<\/li>)+/g, '<ul>$&</ul>');
-            html = html.replace(/\n/g, '<br>');
-            const paragraphs = html.split('<br><br>');
-            html = paragraphs.map(p => `<p>${p}</p>`).join('');
-            html = html.replace(/<br><br>/g, '<br>');
-            return html;
-        }
+    // Convert Markdown → HTML (with tables, images, lists)
+    function markdownToHTML(md) {
+      let html = md;
 
-        // --- Team Detail Loading Logic ---
-        async function loadTeamMember() {
-            const id = sessionStorage.getItem('selectedFile');
+      // Headings
+      html = html.replace(/^### (.*$)/gim, '<h3>$1</h3>');
+      html = html.replace(/^## (.*$)/gim, '<h2>$1</h2>');
+      html = html.replace(/^# (.*$)/gim, '<h1>$1</h1>');
 
-            if (!id || !id.startsWith('teams/')) {
-                document.getElementById('team-bio').innerHTML = '<p>Error: Team member not found.</p>';
-                document.title = 'Team Member Not Found';
-                return;
-            }
+      // Bold, Italic
+      html = html.replace(/\*\*(.*?)\*\*/gim, '<strong>$1</strong>');
+      html = html.replace(/\*(.*?)\*/gim, '<em>$1</em>');
 
-            try {
-                const response = await fetch(`/content/${id}`);
-                if (!response.ok) {
-                    throw new Error('Network response was not ok');
-                }
-                const text = await response.text();
-                const parts = text.split('---');
-                if (parts.length < 3) {
-                    throw new Error('Invalid Markdown format');
-                }
+      // Links, Images
+      html = html.replace(/!\[([^\]]*)\]\((.*?)\)/gim, '<img src="$2" alt="$1" class="img-fluid my-3 rounded">');
+      html = html.replace(/\[([^\]]+)\]\(([^)]+)\)/gim, '<a href="$2" target="_blank">$1</a>');
 
-                const frontmatter = parts[1];
-                const body = parts.slice(2).join('---');
-                const meta = parseYAML(frontmatter);
-                const htmlBody = simpleMarkdownToHTML(body);
+      // Lists
+      html = html.replace(/^- (.*)$/gim, '<li>$1</li>');
+      html = html.replace(/(<li>.*<\/li>)/gims, '<ul class="mb-3">$1</ul>');
 
-                document.getElementById('team-image').src = meta.image;
-                document.getElementById('team-image').alt = meta.title;
-                document.getElementById('team-name').textContent = meta.title;
-                document.getElementById('team-role').textContent = meta.role;
-                document.getElementById('team-bio').innerHTML = htmlBody;
-                document.title = meta.title;
+      // Tables
+      html = html.replace(/^\|(.+)\|\s*\n\|([-:\s|]+)\|\s*\n((\|.*\|\s*\n)*)/gm, match => {
+        const rows = match.trim().split('\n');
+        const headers = rows[0].split('|').filter(Boolean).map(h => `<th>${h.trim()}</th>`).join('');
+        const bodyRows = rows.slice(2).map(r => {
+          const cols = r.split('|').filter(Boolean).map(c => `<td>${c.trim()}</td>`).join('');
+          return `<tr>${cols}</tr>`;
+        }).join('');
+        return `<table class="table table-bordered table-striped mt-3 mb-4"><thead><tr>${headers}</tr></thead><tbody>${bodyRows}</tbody></table>`;
+      });
 
-            } catch (error) {
-                console.error('Error loading team member:', error);
-                document.getElementById('team-bio').innerHTML = '<p>Error loading team member content.</p>';
-                document.title = 'Error Loading Team Member';
-            }
-        }
+      // Paragraphs
+      html = html.replace(/\n{2,}/g, '</p><p>');
+      html = `<p>${html}</p>`;
+      return html;
+    }
 
-        document.addEventListener('DOMContentLoaded', loadTeamMember);
-    </script>
+    // Load selected team member
+    async function loadTeamMember() {
+      const id = sessionStorage.getItem('selectedFile');
+
+      if (!id || !id.startsWith('teams/')) {
+        document.getElementById('team-bio').innerHTML = '<div class="alert alert-danger">Team member not found.</div>';
+        document.title = 'Team Member Not Found';
+        return;
+      }
+
+      try {
+        const response = await fetch(`/content/${id}`);
+        if (!response.ok) throw new Error('Network response was not ok');
+        const text = await response.text();
+
+        const parts = text.split('---');
+        if (parts.length < 3) throw new Error('Invalid Markdown format');
+
+        const frontmatter = parts[1];
+        const body = parts.slice(2).join('---');
+        const meta = parseYAML(frontmatter);
+        const htmlBody = markdownToHTML(body);
+
+        document.getElementById('team-image').src = meta.image || '';
+        document.getElementById('team-name').textContent = meta.title || 'Unnamed';
+        document.getElementById('team-role').textContent = meta.role || '';
+        document.getElementById('team-bio').innerHTML = htmlBody;
+        document.title = meta.title || 'Team Member';
+      } catch (err) {
+        console.error('Error loading team member:', err);
+        document.getElementById('team-bio').innerHTML = '<div class="alert alert-danger">Error loading content.</div>';
+      }
+    }
+
+    document.addEventListener('DOMContentLoaded', loadTeamMember);
+  </script>
 </body>
 </html>
